backends/drm: don't use ColorDescription::toOther for calculating channel factors

ColorDescription::toOther adjusts the brightness from the original color description
to the new one, which makes it unsuitable for checking the brightness after the
transformation.
Instead, a new helper in Colorimetry is added that does only the desired calculation
without any brightness changes.

BUG: 498668